--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,6 +12,17 @@
 
   <body>
     <div class="container">
+
+      <nav>
+        <a href="/">Home</a>
+        <a href="/celebrities/create">Create Celebrity</a>
+        <a href="/movies/create">Create Movie</a>
+        <a href="/movies">Movie</a>
+      </nav>
+
+
+
+
       {{{body}}}
     </div>
 
