--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,12 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+{{!-- <h1>{{title}}</h1>
+<p>Welcome to {{title}}</p> --}}
+
+<div>
+
+  <h1>Movies and Celebrities</h1>
+
+  <a href="/celebrities/create">Create a new celebrity</a>
+  <a href="/celebrities">All Celebrities</a>
+  <a href="/movies/create">Create a new movie</a>
+
+</div>
